# react-native-fast-secure-storage

./: .clang-format  .eslintrc.js  .gitignore  CONTRIBUTING.md  LICENSE  README.md  clang.sh  package.json  react-native-fast-secure-storage.podspec  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  verify-android.yaml
.husky/: pre-commit
android/: CMakeLists.txt  build.gradle  consumer-rules.pro  gradle.properties
android/src/fabric/com/fastsecurestorage/: FastSecureStorageModule.kt
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: bindings.cpp  bindings.h  cpp-adapter.cpp
android/src/main/java/com/fastsecurestorage/: FastSecureStorageBridge.kt  FastSecureStorageImpl.kt  FastSecureStorageModule.java  FastSecureStorageModule.kt  FastSecureStoragePackage.java  FastSecureStoragePackage.kt
android/src/newarch/: FastSecureStorageSpec.kt
android/src/oldarch/: FastSecureStorageSpec.kt
android/src/paper/com/fastsecurestorage/: FastSecureStorageModule.kt
cpp/: SecureStorageHostObject.cpp  SecureStorageHostObject.h  macros.h
example/: app.json  babel.config.js  metro.config.js  package.json  react-native.config.js
example/android/: settings.gradle
example/ios/: .xcode.env.local  File.swift  Podfile
example/src/: App.tsx  Reactangle.tsx
ios/: FastSecureStorage.h  FastSecureStorage.mm  JSIUtils.h  JSIUtils.mm  SecureStorage.h  SecureStorage.mm
jest/: index.js
src/: NativeFastSecureStorage.ts  SecureStorage.ts  enums.ts  index.tsx  types.ts
(+18 files in other folders)
